Actions
Bug #12321
closedspdsock: smatch errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch errors:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/inet/ip/spdsock.c:2777 spdsock_do_updatealg() warn: for statement not indented
Testing done: build and wsdiff; wsdiff is reporting only noise from line number changes..
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit fd82d5a2825fb57d2940ba210af4af02e09883d3
commit fd82d5a2825fb57d2940ba210af4af02e09883d3 Author: Toomas Soome <tsoome@me.com> Date: 2020-02-20T17:08:49.000Z 12321 spdsock: smatch errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions